# xmms2-guile

./: .gitignore  CMakeLists.txt  Makefile  README  ROADMAP  common.mk  compile  development.env  genipc.scm  modules.mk  stress-test-demo  xg-valgrind
b/cmake/: build-deps.cmake  compiler-includes.cmake  compiler-setup.cmake  link-directories.cmake  macros-compiler-knows.cmake  package-guile.cmake
c/: CMakeLists.txt  compiler.h  config.h.in  init.c  primitive-config.c  primitive-connect.c  primitive-medialib.c  primitive-playback.c  primitive-playlist.c  primitive-synchronous.c  primitive-value.c  type-connection.c  type-result.c  type-value.c  utils.c  xmms2-guile.h
demo/: list  pause  play  playlists  show-srv-cfg  status  stop  tickle
doc/: Makefile  template.html  template.latex  xmms2-guile.mdwn  xmms2-protocol.mdwn
examples/: cli  hello-server  playlist2m3u
genipc/: generate-ipc-from-xml  genipc.scm
scheme/documentation/: combine-markdown.scm  module.scm  more.scm  render-markdown.scm
scheme/genipc/: stage-0.scm  stage-1.scm  stage-2.scm  stage-3.scm  utilities.scm
scheme/test/: payload.scm  (+1 more)
test/: 0000-primitives.t  0001-value-types.t
tests/: fetch-spec-scm.t  io-utilities-scm.t  jump-table-scm.t  payload-binary-scm.t  payload-collection-scm.t  payload-dictionary-scm.t  payload-float-scm.t  payload-float-utils-scm.t  payload-integer-scm.t  payload-list-scm.t  payload-scm.t  payload-string-scm.t  types-collection-dsl-scm.t  types-collection-scm.t  types-property-list-scm.t  values-url-scm.t
tools/: combine-into-markdown.scm  compile  dev-env  docc  guile-in-here  guile-load-path.scm  install  module-to-markdown.scm  single-test
(+44 files in other folders)
